--- a/eds-222-hw1.qmd
+++ b/eds-222-hw1.qmd
@@ -1,7 +1,7 @@
 ---
 title: "EDS 222: Homework 1"
-date: "Assigned ???, due ???"
-author: "Your Name Here"
+date: Due 10/14
+author: Bailey Jorgensen
 ---
 
 ## Background
